# resto-manager-all-in-one

./: .env.example  CI-CD-errors.mds  Pipfile  README.md  create_test_accounts.py  database.ps1  index.html  package-lock.json  package.json  pyproject.toml  pytest.ini  render.yaml  render_build.sh  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: solicitud-de-feature.md
.github/workflows/: build.yml  ci-cd.yml  ci.yml  render.yml
implementation-guidance/: architecture.md  architecture.mds  error-solving-queue.mds  implementation-plan.md  implementation-plan.mds  multi-env-implementation.md  render-config-review.md
migrations/: env.py
public/: index.html  sitemap.xml
public/assets/: index-BPoCOpG9.js  index-BfK_jNU9.css  index-BtQ6JxcO.js  index-DPIjs_f5.js
resto_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: app.py  wsgi.py
src/api/: __init__.py  admin.py  commands.py  extensions.py  models.py  pytest.ini  requiments.txt  sitemap_generator.py  utils.py
src/api/routes/: __init__.py  admin.py  auth.py  general.py  kitchen.py  orders.py  products.py  public.py  reservations.py  tables.py  waiter.py
src/api/tests/: conftest.py
src/front/: index.css  main.jsx  routes.jsx  store.js
src/scripts/: __init__.py  create_test_users.py  db_management.py  populate_menu.py  setup_db.py
src/templates/: email_confirmacion_reserva_usuario.html  email_pagina_contacto.html  email_pagina_contacto_admin.html  email_reserva_admin.html  email_verification.html
tests/: __init__.py  conftest.py  test_auth.py  test_database.py  test_orders.py
(+72 files in other folders)
